# podcast-ad-cutter

./: .containerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml  web.py  webui.py
.github/workflows/: build-push.yml
config/: config_loader.py
db/: connection.py  schema.sql
db/migrations/: 001_initial.sql  002_llm_calls.sql
db/repositories/: __init__.py  ad_segment_repo.py  episode_repo.py  llm_call_repo.py  topic_context_repo.py  transcript_repo.py
deployment/: .gitignore  README.md  butane.yaml.template  env.example  first-boot.sh  generate.sh  nfs-output.mount.template  podcast-ad-cutter.container.template  podcast-ad-cutter.timer.template  tailscale.container.template
docs/plans/: 2026-02-13-podcast-ad-cutter.md  2026-02-24-context-aware-ad-detection-design.md  2026-02-25-optimizations-design.md  2026-02-25-optimizations-plan.md  2026-02-26-deployment-design.md  2026-02-26-deployment-podman-coreos.md  2026-02-26-split-prompt-behavior-from-json-suffix-plan.md  2026-02-26-split-prompt-behavior-from-json-suffix.md  2026-02-27-frontend-ui-tweaks-design.md  2026-02-27-frontend-ui-tweaks.md
frontend/: app.py  config_cache.py  config_editor.py  pipeline_executor.py  scheduler.py  sse.py  state.py
frontend/routes/: feeds.py  models.py  pages.py  pipeline.py  scheduler.py  settings.py
frontend/templates/: base.html  index.html
frontend/templates/partials/: add_feed_form.html  cost_badge.html  feed_row.html  feed_table.html  pipeline_actions.html  progress.html  scheduler_fieldset.html  settings_form.html
models/: __init__.py  ad_segment.py  episode.py  llm_call.py  transcript.py
pipeline/: ad_detector.py  audio_editor.py  audio_preprocessor.py  downloader.py  exceptions.py  feed_publisher.py  llm_client.py  rss.py  runner.py  topic_extractor.py  transcriber.py
tests/: conftest.py  test_ad_detector.py  test_ad_segment_repo.py  test_config_editor.py  test_config_loader.py  test_connection.py  test_downloader.py  test_episode_repo.py  test_feed_publisher.py  test_llm_client.py  test_models.py  test_models_route.py  test_rss.py  test_runner.py  test_scheduler_module.py  test_transcript_repo.py
tests/fixtures/: sample_feed.xml  test_config.yaml
