[project]
name = "podcast-ad-cutter"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "litellm>=1.40",
    "openai>=1.30",
    "pydub>=0.25",
    "ffmpeg-python>=0.2",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "pipeline*", "db*"]
exclude = ["tests*", "output*", "data*"]

[tool.setuptools]
py-modules = ["config_loader"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
